RESOLVED FIXED197654
Translucent gradient rendering bug due to will-change transform
https://bugs.webkit.org/show_bug.cgi?id=197654
Summary Translucent gradient rendering bug due to will-change transform
Jonas Treub
Reported 2019-05-07 03:07:49 PDT
Overview: When toggling an element background from a color to a translucent gradient the gradient sometimes gets a black background. This only appears to happen when will-change transform is enabled for the element. 1) View the example: https://codepen.io/jonastreub/pen/XwbWaR 2) Toggle the element background by clicking it 3) Notice that the gradient has a black background Expected Results: The gradient to be translucent.
Attachments
Patch (7.94 KB, patch)
2019-05-11 13:00 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-07 11:18:29 PDT
Simon Fraser (smfr)
Comment 2 2019-05-07 13:29:39 PDT
Sounds like we're failing to update contentsOpaque.
Simon Fraser (smfr)
Comment 3 2019-05-11 12:33:25 PDT
We currently re-evaluate contentsOpaque in RenderLayerBacking::updateGeometry(), but that doesn't fire for just a background change (repaint triggers an updateConfiguration()). However, contentsOpaque depends on geometry, and updateConfiguration() runs first, so I think we'll have to move it to updateAfterDescendants().
Simon Fraser (smfr)
Comment 4 2019-05-11 13:00:49 PDT
WebKit Commit Bot
Comment 5 2019-05-11 15:05:43 PDT
Comment on attachment 369658 [details] Patch Clearing flags on attachment: 369658 Committed r245207: <https://trac.webkit.org/changeset/245207>
WebKit Commit Bot
Comment 6 2019-05-11 15:05:44 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 7 2019-05-11 15:06:47 PDT
This did not fix bug 197611, so something else is going on there.
Simon Fraser (smfr)
Comment 8 2019-05-29 19:12:52 PDT
*** Bug 197611 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 9 2019-06-01 19:54:50 PDT
*** Bug 196946 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.