Translucent gradient rendering bug due to will-change transform https://bugs.webkit.org/show_bug.cgi?id=197654 <rdar://problem/50547664>

Reviewed by Dean Jackson.
Source/WebCore:

We failed to re-evaluate 'contentsOpaque' when a background changed, because this
happened in updateGeometry() and that doesn't run for background changes.

However, 'contentsOpaque' also requires knowing about geometry because we have to
turn it off when there's subpixel positioning, and updateConfiguration()
runs before updateGeometry().

So compute m_hasSubpixelRounding in updateGeometry() and set contentsOpaque in
updateAfterDescendants().

Test: compositing/contents-opaque/background-change-to-transparent.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):
(WebCore::RenderLayerBacking::updateGeometry):
(WebCore::RenderLayerBacking::updateAfterDescendants):
* rendering/RenderLayerBacking.h:

LayoutTests:

* compositing/contents-opaque/background-change-to-transparent-expected.txt: Added.
* compositing/contents-opaque/background-change-to-transparent.html: Added.


Canonical link: https://commits.webkit.org/211945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245207 268f45cc-cd09-0410-ab3c-d52691b4dbfc